--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -10,7 +10,7 @@
   <distributionManagement>
      <snapshotRepository>
            <id>myapp-repo</id>
-	   <url>${URL}</url>
+	   <url>http://192.168.100.12:8081/repository/myapp-repo/</url>
      </snapshotRepository>
   </distributionManagement>
   <dependencies>
