--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -10,7 +10,7 @@
   <distributionManagement>
      <repository>
            <id>myapp-repo</id>
-	   <url>http://192.168.100.12:8081/repository/myapp-repo/</url>
+	   <url>${URL}/repository/myapp-repo/</url>
      </repository>
   </distributionManagement>
   <dependencies>
@@ -71,7 +71,7 @@
 		     </executions>
 		      <configuration>
 		            <serverId>nexus</serverId>
-		            <nexusUrl>http://192.168.100.12:8081/nexus</nexusUrl>
+		            <nexusUrl>${URL}/nexus</nexusUrl>
 		            <skipStaging>true</skipStaging>
 		      </configuration>
 		   </plugin>
