--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -10,7 +10,7 @@
   <distributionManagement>
      <repository>
            <id>myapp-repo</id>
-	   <url>${URL}/repository/myapp-repo/</url>
+	   <url>${URL}/repository/myapp-repo</url>
      </repository>
   </distributionManagement>
   <dependencies>
@@ -32,6 +32,14 @@
 
   <build>
   	<plugins>
+		<plugin>
+ 		  <groupId>org.apache.maven.plugins</groupId>
+   			<artifactId>maven-deploy-plugin</artifactId>
+   			<version>${maven-deploy-plugin.version}</version>
+   		<configuration>
+      			<skip>true</skip>
+   		</configuration>
+		</plugin>
       		<plugin>
           		<groupId>org.apache.maven.plugins</groupId>
           		<artifactId>maven-shade-plugin</artifactId>
