--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx
-RUN apt-get update && apt-get -y install fortune && apt-get -y install cowsay
-RUN ln -s /usr/games/fortune /usr/bin/fortune && ln -s /usr/games/cowsay /usr/bin/cowsay
+RUN apt-get update && apt-get -y install fortune
+RUN ln -s /usr/games/fortune /usr/bin/fortune
 CMD tail -f /dev/null
 
